--- a/index.html
+++ b/index.html
@@ -12,34 +12,48 @@
       href="./images/favicon-32x32.png"
     />
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+
     <title>Frontend Mentor | QR code component</title>
 
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="bigcontainer">
-      <img
-        src="/images/image-qr-code.png"
-        alt="qr code"
-        width="100%"
-        style="border-radius: 15px"
-      />
+    <main>
+      <div class="bigcontainer">
+        <img
+          src="/images/image-qr-code.png"
+          alt="qr code"
+          width="100%"
+          style="border-radius: 15px"
+        />
+        <div class="textcontainer">
+          <p>
+            <strong>
+              Improve your front-end skills by building projects
+            </strong>
+          </p>
 
-      <p class="textcontainer">
-        <strong> Improve your front-end skills by building projects </strong>
-      </p>
+          <p>
+            Scan the QR code to visit Frontend Mentor and take your coding
+            skills to the next level
+          </p>
+        </div>
+      </div>
+    </main>
 
-      <p id="text2">
-        Scan the QR code to visit Frontend Mentor and take your coding skills to
-        the next level
-      </p>
-    </div>
-
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Gerald Addey</a>.
-    </div>
+    <footer>
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="#">Gerald Addey</a>.
+      </div>
+    </footer>
   </body>
 </html>
