--- a/index.html
+++ b/index.html
@@ -26,18 +26,9 @@
   <body>
     <main>
       <div class="bigcontainer">
-        <img
-          src="/images/image-qr-code.png"
-          alt="qr code"
-          width="100%"
-          style="border-radius: 15px"
-        />
+        <img src="/images/image-qr-code.png" alt="qr code" />
         <div class="textcontainer">
-          <p>
-            <strong>
-              Improve your front-end skills by building projects
-            </strong>
-          </p>
+          <h1>Improve your front-end skills by building projects</h1>
 
           <p>
             Scan the QR code to visit Frontend Mentor and take your coding
